--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Font Awesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
