--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Font Awesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <!-- Custom CSS -->
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style.min.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
   </div>
 
   <!-- Custom JavaScript -->
-  <script type="module" src="main.js"></script>
+  <script type="module" src="main.min.js"></script>
   <!-- Load YouTube Iframe API -->
   <script src="https://www.youtube.com/iframe_api"></script>
 </body>
